--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
@@ -108,6 +108,33 @@
         lastError: '@Html.Raw(lastErrorMessage)'
     }
 
+    if (window.addEventListener) {
+        window.addEventListener("message", onMessage, false);
+    }
+    else if (window.attachEvent) {
+        window.attachEvent("onmessage", onMessage, false);
+    }
+
+    function onMessage(event) {
+        // Check sender origin to be trusted
+        //if (event.origin !== "http://localhost") return;
+        var data = event.data;
+        if (typeof (window[data.func]) == "function") {
+            window[data.func].call(null, data.message);
+        }
+    }
+
+    /*
+    //Do not remove, use this when implementing categorization of fileuploads for multiple cases /TAN
+    function openClipBoardPopUp(message) {
+       $("a[href='#upload_clipboard_file_popup']").trigger("click");
+    }
+
+    function openCaseFilesPopUp(message) {
+        $("a[href='#NewCase_upload_files_popup']").trigger("click");
+    }
+
+    */
 </script>
 
 @Scripts.Render("~/Content/js/Case/extendedCase")
@@ -120,7 +147,6 @@
             <input id="btnSave" type="button" value='@Translation.Get("Save", Enums.TranslationSource.TextTranslation)' class="btn btn-default pull-left" style="margin-right:20px !important;" />
             @if (Model.WorkflowSteps != null && Model.WorkflowSteps.Any())
             {
-
                 <div class="input-group">
                     <select id="steps" name="steps" class="dropdown-group pull-left">
                         <option value="0" class="form-control">@Translation.Get(Text.SelectStep)</option>
@@ -321,59 +347,14 @@
         {
             <div id="attachment-tab" class="tab-pane" style="overflow:hidden;">
                 <div>
-
                         @*///* This copied code from NewCase.cshtml */
                         ///* TODO: Make partial or shared code */*@
 
                         <div class="col-md-12" style="margin-top:20px; margin-bottom:0px !important;">
                             <a id="" href="#NewCase_upload_files_popup" role="button" class="btn btn-default hasAttribute" data-toggle="modal" standardName="@GlobalEnums.TranslationCaseFields.Filename.ToString()">@Translation.Get("Add", Enums.TranslationSource.TextTranslation)</a>
-                            <div id="NewCase_upload_files_popup" role="dialog" class="modal fade" aria-labelledby="myModalLabel" aria-hidden="true">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                                            <h5 class="modal-title">&nbsp;</h5>
-                                        </div>
-                                        <div class="modal-body">
-                                            <div id="NewCasefile_uploader"></div>
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button class="btn btn-default" data-dismiss="modal" aria-hidden="true">@Translation.Get("Close", Enums.TranslationSource.TextTranslation)</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
+                      
                             <a href="#upload_clipboard_file_popup" role="button" class="btn btn-default hasAttribute" data-src="case" standardName="@GlobalEnums.TranslationCaseFields.Filename.ToString()">@Translation.Get("Add from clipboard", Enums.TranslationSource.TextTranslation)</a>
-                            <div id="upload_clipboard_file_popup" role="dialog" class="modal fade" aria-labelledby="myModalLabelCase" aria-hidden="true">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                                            <h3>&nbsp;</h3>
-                                        </div>
-                                        <div class="modal-body" style="max-height: 600px; text-align: center;">
-                                            <form onsubmit="return false;">
-                                                <div class="form-group">
-                                                    <label>@Translation.Get("1. Write filename (leave blank for automatic naming)", Enums.TranslationSource.TextTranslation) </label><br />
-                                                    <input class="" type="text" id="imgFilename" autocomplete="Off" />
-                                                    <span id="imageNameRequired" style="color: red"> @Translation.Get("must be specified", Enums.TranslationSource.TextTranslation) </span>
-                                                </div>
-                                                <div class="form-group">
-                                                    <label>@(Translation.Get("2. Press Ctrl+V for inserting picture", Enums.TranslationSource.TextTranslation) )</label><br />
-                                                    <label>@(Translation.Get("3. Click on Save for adding to case", Enums.TranslationSource.TextTranslation)) </label>
-                                                    <div id="previewPnl"></div>
-                                                </div>
-                                            </form>
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" id="btnSave" class="btn btn-ok btn-default" style="display: none">@Translation.Get("Save", Enums.TranslationSource.TextTranslation)</button>
-                                            <button type="button" id="btnCancel" class="btn btn-cancel btn-default" data-dismiss="modal">@Translation.Get("Cancel", Enums.TranslationSource.TextTranslation)</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
+            
                             <table id="NewCasefiles_table" class="table table-striped" style="margin-top:10px;">
                                 <tbody></tbody>
                             </table>
@@ -382,4 +363,54 @@
             </div>
         }
     </div>
+
+
+@if (Model.CaseId == 0 && Model.CaseDataModel.FieldSettings.Select(f => f.Name).Contains(GlobalEnums.TranslationCaseFields.Filename.ToString()))
+{
+    <div id="NewCase_upload_files_popup" role="dialog" class="modal fade" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <h5 class="modal-title">&nbsp;</h5>
+                </div>
+                <div class="modal-body">
+                    <div id="NewCasefile_uploader"></div>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-default" data-dismiss="modal" aria-hidden="true">@Translation.Get("Close", Enums.TranslationSource.TextTranslation)</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="upload_clipboard_file_popup" role="dialog" class="modal fade" aria-labelledby="myModalLabelCase" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <h3>&nbsp;</h3>
+                </div>
+                <div class="modal-body" style="max-height: 600px; text-align: center;">
+                    <form onsubmit="return false;">
+                        <div class="form-group">
+                            <label>@Translation.Get("1. Write filename (leave blank for automatic naming)", Enums.TranslationSource.TextTranslation) </label><br />
+                            <input class="" type="text" id="imgFilename" autocomplete="Off" />
+                            <span id="imageNameRequired" style="color: red"> @Translation.Get("must be specified", Enums.TranslationSource.TextTranslation) </span>
+                        </div>
+                        <div class="form-group">
+                            <label>@(Translation.Get("2. Press Ctrl+V for inserting picture", Enums.TranslationSource.TextTranslation) )</label><br />
+                            <label>@(Translation.Get("3. Click on Save for adding to case", Enums.TranslationSource.TextTranslation)) </label>
+                            <div id="previewPnl"></div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" id="btnSave" class="btn btn-ok btn-default" style="display: none">@Translation.Get("Save", Enums.TranslationSource.TextTranslation)</button>
+                    <button type="button" id="btnCancel" class="btn btn-cancel btn-default" data-dismiss="modal">@Translation.Get("Cancel", Enums.TranslationSource.TextTranslation)</button>
+                </div>
+            </div>
+        </div>
+    </div>
+}
+
 </div>
